--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
                     <br><br><br><br><br><br><br><br><br><br><br><br<br><br><br><br><br><br><br>
                 </article>
                 <br><br><br><br><br><br>
-                <button type="button" onclick="location.href = 'file:///C:/Users/%EC%9D%B4%EC%9C%A0%EB%A0%A8/Desktop/html5/HTMLPage1.html'">메인 화면으로 이동하기</button>
-                <button type="button" onclick="location.href = 'file:///C:/Users/%EC%9D%B4%EC%9C%A0%EB%A0%A8/Desktop/html5/HTMLPage5.html'">하이라이트 영상 보러가기</button>
+                <button type="button" onclick="location.href = 'https://leeyuryeon.github.io/html/'">메인 화면으로 이동하기</button>
+                <button type="button" onclick="location.href = 'https://leeyuryeon.github.io/html-tv-ex/'">하이라이트 영상 보러가기</button>
     </div>
 </body>
 </html>
